@@ -1,3 +1,13 @@
+2000-06-21  Dave Peticolas  <dave@krondo.com>
+
+	* src/register/Makefile.am: don't compile table-html.c, it is
+	not needed for linking.
+
+	* src/gnome/window-register.c: remove include of table-html.c
+
+	* src/engine/gnc-common.h: use 'gboolean' to typedef gncBoolean.
+	We should probably just phase out the use of gncBoolean.
+
 2000-06-20  Dave Peticolas  <dave@krondo.com>
 
 	* src/engine/util.c (xaccParseAmount): accept 8 decimal places
